--- a/configuration.properties
+++ b/configuration.properties
@@ -3,5 +3,5 @@ url=https://evernote.com/
 username=adamnordin2011@gmail.com
 password=123456Abc
 wrongUserName=adamnordin3011@gmail.com
-title=TitleName
-note=Some Notes
+title=AdamsNotesTitle
+note=Some Notes Here
